# ticli

./: .gitmodules  .pre-commit-config.yaml  Cargo.toml  LICENSE-MIT  README.md  build.rs  rust-toolchain.toml
.github/: dependabot.yml  issue_template.md  pull_request_template.md
.github/workflows/: CICD.yml
completions/bash/: ticli.bash
completions/elvish/: ticli.elv
completions/fish/: ticli.fish
completions/powershell/: _ticli.ps1
completions/zsh/: _ticli
src/: cli.rs  client.rs  executor.rs  main.rs  parser.rs  range.rs  record.rs  runner.rs  transcode.rs
src/format/: duration.rs  literal.rs  mod.rs  table.rs
src/model/: mod.rs
src/render/: literal.rs  mod.rs  table.rs
src/repl/: mod.rs  readline.rs
src/tikv/: client.rs  mod.rs
