[package]
name = "ticli"
version = "0.1.0"
authors = ["The TiCLI Project Authors"]
description="A modern cli for tikv written in rust"
edition = "2021"
categories = ["command-line-utilities"]
keywords = [
    "tikv",
    "tidb",
    "repl",
    "tool",
]
readme = "README.md"
license = "MIT/Apache-2.0"
exclude = ["/completions"]
repository = "https://github.com/hackathon-2022-ticli/ticli/csview"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tikv-client = { git = "https://github.com/tikv/client-rust", rev = "027a7df" }
clap = { version = "4", features = ["wrap_help", "derive"] }
anyhow = "1.0"
tokio = { version = "1.21", features = ["full"] }
owo-colors = "3.5"
slog = "2.7"
tabled = { version = "0.10", features = ["color"] }
rustyline = "10.0"
env_logger = "0.9"
rustyline-derive = "0.7"
shlex = "1.1"
base64 = "0.13"
async-recursion = "1"
atty = "0.2"

[build-dependencies]
clap = { version = "4", features = ["wrap_help", "derive"] }
clap_complete = "4"
owo-colors = "3.5"

[profile.release]
lto = true
codegen-units = 1
