[package]
name = "ticli"
version = "0.1.0"
authors = ["The TiCLI Project Authors"]
description="A modern cli for tikv"
edition = "2021"
categories = ["command-line-utilities"]
keywords = [
    "tikv",
    "tidb",
    "repl",
    "tool",
]
readme = "README.md"
license = "MIT/Apache-2.0"
exclude = ["/completions"]
repository = "https://github.com/hackathon-2022-ticli/ticli/csview"

[dependencies]
tikv-client = { git = "https://github.com/tikv/client-rust", rev = "027a7df" }
clap = { version = "3", features = ["wrap_help", "derive"] }
anyhow = "1.0"
tokio = { version = "1.21", features = ["full"] }
owo-colors = { version ="3.5" }
slog = "2.7"
tabled = { version = "0.10", features = ["color"] }
rustyline = "10.0"
env_logger = "0.9"
rustyline-derive = "0.7"
shlex = "1.1"
base64 = "0.13"
async-recursion = "1"
atty = "0.2"
csv = "1.1"
strum = { version = "0.24", features = ["derive"] }
serde_json = "1"
colored_json = "3"
regex = "1"
lazy_static = "1.4.0"

[build-dependencies]
clap = { version = "3", features = ["wrap_help", "derive"] }
clap_complete = "3"
strum = { version = "0.24", features = ["derive"] }

[profile.release]
lto = true
codegen-units = 1
