[package]
name = "ticli"
version = "0.1.0"
authors = ["The TiCLI Project Authors"]
description="A modern cli for tikv"
edition = "2021"
categories = ["command-line-utilities"]
keywords = [
    "tikv",
    "tidb",
    "repl",
    "tool",
]
readme = "README.md"
license = "MIT/Apache-2.0"
exclude = ["/completions"]
repository = "https://github.com/hackathon-2022-ticli/ticli"

[dependencies]
tikv-client = "0.1.0"
clap = { version = "3", features = ["wrap_help", "derive"] }
anyhow = "1.0"
tokio = { version = "1.21", features = ["full"] }
owo-colors = { version ="3.5" }
slog = "2.7"
tabled = { version = "0.10", features = ["color"] }
rustyline = "10.0"
env_logger = "0.9"
rustyline-derive = "0.7"
shlex = "1.1"
base64 = "0.13"
async-recursion = "1"
atty = "0.2"
csv = "1.1"
serde_json = "1"
colored_json = "3"
regex = "1"
lazy_static = "1.4"
xdg = "2.1"

[build-dependencies]
clap = { version = "3", features = ["wrap_help", "derive"] }
clap_complete = "3"
lazy_static = "1.4"

[patch.crates-io]
tikv-client = { path = "third_party/tikv-client" }

[profile.release]
lto = true
codegen-units = 1
